--- a/src/app/layout/topbar/topbar.component.css
+++ b/src/app/layout/topbar/topbar.component.css
@@ -5,3 +5,80 @@
 .example-spacer {
     flex: 1 1 auto;
 }
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background-color); */
+    -webkit-transition: .4s;
+    transition: .4s;
+    border: 2px solid white;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #74bffd;
+    /* border: 1px solid rgba(0, 0, 0, 0.452); */
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    /* -webkit-transform: translateX(26px); */
+    /* -ms-transform: translateX(26px); */
+    transform: translateX(26px);
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-radius: 50px;
+    height: 75%;
+    background-color: yellow;
+    box-shadow: rgba(0, 0, 0, 0.604) 0.5px 1px 20px 1px;
+    margin-right: 20px;
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+
+}
+
+.slider.round:before {
+    width: 43%;
+    height: 43%;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    transform: rotateZ(-135deg);
+}
