--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-layout></app-layout>
-<div class="">This is the dummy text for testing sdfsfs</div>
+<div class="">This is the dummy text for testing </div>
 
 <div class="card"> dfsfsdf</div>
