--- a/src/app/layout/topbar/topbar.component.css
+++ b/src/app/layout/topbar/topbar.component.css
@@ -82,3 +82,39 @@ input:checked+.slider:before {
     border-top-left-radius: 50px;
     transform: rotateZ(-135deg);
 }
+
+
+    /* Style for the navigation button */
+    .nav-button {
+        display: inline-block;
+        position: relative;
+        text-decoration: none;
+        color: #333; /* Change the color as needed */
+        padding: 10px 20px;
+        font-size: 16px;
+        transition: color 0.3s ease-in-out;
+      }
+  
+      /* Underline effect */
+      .nav-button::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #3498db; /* Change the color as needed */
+        transform: scaleX(0);
+        transform-origin: bottom right;
+        transition: transform 0.3s ease-in-out;
+      }
+  
+      /* Hover effect */
+      .nav-button:hover {
+        color: #e74c3c; /* Change the hover color as needed */
+      }
+  
+      .nav-button:hover::before {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+      }
